adding isPrimitiveType(...) method in ValidPropertyTypes